--- a/contact us/contact.html
+++ b/contact us/contact.html
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
             <div class="icon">
-                <a href="../search bar/search.html"><i class="fa-solid fa-magnifying-glass"></i> </a>
+                <a href="#"><i class="fa-solid fa-magnifying-glass"></i> </a>
                 <a href="../cart/cart.html"><i class="fa-solid fa-user"></i></a>
                 <a href="../cart/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </div> 
